--- a/nosotros.html
+++ b/nosotros.html
@@ -19,7 +19,7 @@
 
   <link rel="stylesheet" type="text/css" href="css/app.css">
 
-  </head>
+</head>
 
 <body>
   
@@ -51,7 +51,7 @@
 <div class="header_nosotros"> 
   <div class="container-fluid">
     <div class="container">
-       <h1> Con tu apoyo,<br> yo le gano al cáncer </h1> 
+        <h1> Con tu apoyo,<br> yo le gano al cáncer </h1> 
         <p> La <strong>Fundación Niño y Cáncer</strong> es una entidad sin fines de lucro<br> que nació para ser un importante apoyo en el tratamiento<br> integral de los niños con cáncer.</p>
     </div>
   </div>
@@ -62,18 +62,18 @@
   <div class="container">
     <div class="row">      
       <h2> Nosotros </h2>
-         <div class="nosotros_texto">
-          <p> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer o leucemia atendidos en el Sistema Público del país (Plan AUGE y GES) mejorando su calidad de vida y fortaleciendo su integración social y familiar.
-          </p>
-          <p> Sus objetivos principales son: </p>
-          <ul>
-            <li> Apoyar el tratamiento  de la enfermedad. </li>
-            <li> Generamos espacios de recreación y mejoramos la calidad de vida del niño durante y después de su tratamiento. </li>
-            <li> Rehabilitamos al niño tratado y posteriormente lo integramos a la  sociedad (Becas de Estudios). </li>
-            <li> Damos apoyo social y solidario a la familia del niño (Departamentos de Acogida, almuerzo para padres de niños hospitalizados, Cenas de Navidad, etc.). </li>
-          </ul>
-          <p> Necesitamos la colaboración solidaria  de la comunidad, para lograr transformar la cara triste de la enfermedad en una cara feliz con esperanzas para estos pequeños que luchan día a día por su vida. </p>
-        </div>
+          <div class="nosotros_texto">
+              <p> La Fundación Niño y Cáncer es una entidad sin fines de lucro que nació para ser un importante apoyo en el tratamiento integral de los niños con cáncer o leucemia atendidos en el Sistema Público del país (Plan AUGE y GES) mejorando su calidad de vida y fortaleciendo su integración social y familiar.
+              </p>
+              <p> Sus objetivos principales son: </p>
+              <ul>
+                <li> Apoyar el tratamiento  de la enfermedad. </li>
+                <li> Generamos espacios de recreación y mejoramos la calidad de vida del niño durante y después de su tratamiento. </li>
+                <li> Rehabilitamos al niño tratado y posteriormente lo integramos a la  sociedad (Becas de Estudios). </li>
+                <li> Damos apoyo social y solidario a la familia del niño (Departamentos de Acogida, almuerzo para padres de niños hospitalizados, Cenas de Navidad, etc.). </li>
+              </ul>
+              <p> Necesitamos la colaboración solidaria  de la comunidad, para lograr transformar la cara triste de la enfermedad en una cara feliz con esperanzas para estos pequeños que luchan día a día por su vida. </p>
+          </div>
     </div>
   </div>
 </div><!--Nosotros-->
@@ -82,12 +82,12 @@
 <div class="imagenes">
   <div class="row">
     <div class="container">      
-        <img src="../src/images/cena2.jpg" alt="">
-        <img src="../src/images/Pict0003.jpg" alt="">
-        <img src="../src/images/Pict0004.jpg" alt="">
-        <img src="../src/images/Pict0005.jpg" alt="">
-        <img src="../src/images/esqui.jpg" alt="">
-        <img src="../src/images/torneo23.jpg" alt="">
+        <img src="../src/images/cena2.jpg" alt="Imagen de la fundacion">
+        <img src="../src/images/Pict0003.jpg" alt="Imagen de la fundacion">
+        <img src="../src/images/Pict0004.jpg" alt="Imagen de la fundacion">
+        <img src="../src/images/Pict0005.jpg" alt="Imagen de la fundacion">
+        <img src="../src/images/esqui.jpg" alt="Imagen de la fundacion">
+        <img src="../src/images/torneo23.jpg" alt="Imagen de la fundacion">
     </div>    
   </div>
 </div><!--Imagenes-->
@@ -104,22 +104,22 @@
   <div class="row">
     <div class="container"> 
         <div class="col-md-4 col-sm-12">
-         <h2> Contacto </h2> 
-           <h4> Dirección </h4>
-           <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
-           <h4> Cta. Cte. </h4>
-           <p> Banco BCI N° 85999997 </p>
-           <h4> Teléfonos </h4>
-           <p> 22170821 - 22170811 / 22170820 </p>
-           <h4> RUT </h4>
-           <p> 72.169.900-5 </p>
-           <h4> Email </h4>
-           <p> fundacion@ninoycancer.cl </p>
-           <p class="networks">
-             <a href="#"><i class="fab fa-facebook-f"></i></a>
-             <a href="#"><i class="fab fa-twitter"></i></a>
-             <a href="#"><i class="fab fa-instagram"></i></a> 
-           </p>
+          <h2> Contacto </h2> 
+          <h4> Dirección </h4>
+          <p> Tupungato 10070 Vitacura, Santiago de Chile </p>
+          <h4> Cta. Cte. </h4>
+          <p> Banco BCI N° 85999997 </p>
+          <h4> Teléfonos </h4>
+          <p> 22170821 - 22170811 / 22170820 </p>
+          <h4> RUT </h4>
+          <p> 72.169.900-5 </p>
+          <h4> Email </h4>
+          <p> fundacion@ninoycancer.cl </p>
+          <p class="networks">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a> 
+          </p>
         </div>
         <div class="col-md-8 col-sm-12">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.5093060796653!2d-70.53933968519183!3d-33.383874501483845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses!2scl!4v1530819407161" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -129,9 +129,9 @@
 </div><!--Footer-->
 
 
-<!--Jquery 3.3.1-->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!--Jquery 3.3.1-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
